--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         }
 
     }
-    let ramesh = new User("Ramesh", "PNB", "Amreli", "amr3650", 20000, [{ date: "21/9/2024", amount: 2000, type: "debit" }, { date: "2/1/2024", amount: 1650, type: "cedit" }, { date: "2/11/2023", amount: 1050, type: "cedit" }])
-    ramesh.history()
-    ramesh.balance()
-    ramesh.details()
+    let sumit = new User("Sumit", "Bank Of Baroda", "Babra", "BARB0BABRAX", 6743.25, [{ date: "21/9/2024", amount: 5000, type: "debit" }, { date: "2/1/2024", amount: 1650, type: "credit" }, { date: "2/11/2023", amount: 1050, type: "credit" }])
+    sumit.history()
+    sumit.balance()
+    sumit.details()
 </script>
